--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 </head>
 
 <body>
+    <!-- intestazione -->
+    <header class="container top" >
+        <h1>hula baluba</h1>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
     
 </body>
+
 </html>
