--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 <body>
     <!-- intestazione -->
     <header class="container top" >
-        <h1>hula baluba</h1>
+            <img src="./img/logo.svg" alt="newspaper logo" 
+            id="logo">
     </header>
 
     <main>
+        sec
 
     </main>
 
