--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
             id="logo">
     </header>
 
-    <main>
-        sec
-
+    <main class="container">
+        <!-- title + author -->
+        <section>
+            <h1 >internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <p class="smallText"> scritto da <span id="textBlue">the booleaner</span> </p>
+            <p class="smallerText">il 12.6.23</p>
+        </section>    
     </main>
 
     <footer>
