--- a/index.html
+++ b/index.html
@@ -26,8 +26,27 @@
             <p class="smallText"> scritto da <span id="textBlue">the booleaner</span> </p>
             <p class="smallerText">il 12.6.23</p>
         </section>    
-    </main>
+        
+        <!-- foto -->
+        <section>
 
+        </section>
+
+        <!-- article -->
+        <section>
+            <!-- table -->
+            <section>
+
+            </section>
+
+        </section>
+        
+        <!-- suggestions -->
+        <section>
+
+        </section>
+
+    </main>
     <footer>
 
     </footer>
