add section images

--- a/index.html
+++ b/index.html
@@ -23,12 +23,18 @@
         <!-- title + author -->
         <section>
             <h1 >internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <p class="smallText"> scritto da <span id="textBlue">the booleaner</span> </p>
-            <p class="smallerText">il 12.6.23</p>
+            <p class="smallText textGray"> scritto da <span class="textBlue">the booleaner</span> </p>
+            <p class="smallerText textGray">il 12.6.23</p>
         </section>    
         
         <!-- foto -->
         <section>
+            <img src="./img/tim-1.jpg" alt="tim-1">
+            <img src="./img/tim-2.jpg" alt="tim-2">
+
+            <!-- didascalie -->
+            <p class="smallerText"> 1st photo: ciccio pasticcio chiacchiera con i compagni di bevute</p>
+            <p class="smallerText"> 2nd photo: ciccio pasticcio dimostra che silenzioso è letale</p>
 
         </section>
 
