--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
 
         <!-- article -->
         <section>
+
+            <p>
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum perferendis expedita commodi repellat dignissimos molestias, aliquid, odit culpa, consequuntur perspiciatis nisi aperiam voluptate nostrum numquam modi repellendus nihil maxime voluptas.
+             Quisquam, ullam placeat modi suscipit corporis minus vitae. Inventore, illum amet? Exercitationem fugiat deserunt sapiente aperiam assumenda velit. Illum aliquam sed 
+                <span class="textHighlight">ipsum quod doloremque impedit dolores qui nostrum laboriosam harum?
+                Aliquid sunt ratione quae molestiae cumque. Rem cupiditate harum nihil architecto dolor magni doloremque deleniti dolorem, debitis vitae sunt quis totam fugit, quia vel
+                </span> corporis mollitia sapiente, nisi explicabo saepe!
+             Suscipit perspiciatis obcaecati qui quisquam nisi alias rem repudiandae culpa aliquid ab impedit vitae rerum vero, praesentium maiores dicta natus illum voluptatem dolorem veniam sint! Corporis consequatur natus eum aliquid.
+             Facilis nesciunt iusto nemo dolorum, error accusamus libero nulla accusantium provident nihil tenetur a ex animi harum veritatis! Error delectus earum suscipit laudantium nihil, repellat voluptate a rem beatae est!
+            </p>
+
+            <!-- elenco puntato -->
+            <ul id="noPadd">
+                <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum harum delectus molestias magnam quibusdam quo nostrum.</li>
+                <li> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, ipsam harum.</li>
+                <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, repellat? Facere velit veritatis, dolorum aliquid nostrum, pariatur similique ipsa, distinctio necessitatibus quae est.</li>
+            </ul>
+
             <!-- table -->
             <section>
 
