--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <!-- article -->
         <section>
 
+            <!-- articolo -->
             <p>
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum perferendis expedita commodi repellat dignissimos molestias, aliquid, odit culpa, consequuntur perspiciatis nisi aperiam voluptate nostrum numquam modi repellendus nihil maxime voluptas.
              Quisquam, ullam placeat modi suscipit corporis minus vitae. Inventore, illum amet? Exercitationem fugiat deserunt sapiente aperiam assumenda velit. Illum aliquam sed 
@@ -59,9 +60,39 @@
             </ul>
 
             <!-- table -->
-            <section>
+            <table>
+                <thead>
+                    <tr class="tableHead">
+                        <th>obladi</th>
+                        <th>oblada</th>
+                        <th>life goes on</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>camera d'albergo</td>
+                        <td>200€</td>
+                    </tr>
+                    <tr>
+                        <td>32</td>
+                        <td>fish&chips</td>
+                        <td>320€</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="2">totale</td>
+                        <td>640€</td>
+                    </tr>
+                </tfoot>
+            </table>
 
-            </section>
 
         </section>
         
