--- a/index.html
+++ b/index.html
@@ -63,36 +63,44 @@
             <table>
                 <thead>
                     <tr class="tableHead">
-                        <th>obladi</th>
-                        <th>oblada</th>
-                        <th>life goes on</th>
+                        <th >obladi</th>
+                        <th >oblada</th>
+                        <th class="thsize">life goes on</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Biglietto aereo</td>
-                        <td>120€</td>
+                    <tr class="tableBG">
+                        <td>Lorem ipsum dolor sit amet.</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing.</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quas illo laborum! Labore, obcaecati? Repellat necessitatibus a cupiditate reprehenderit, repudiandae quibusdam pariatur libero voluptatum numquam fuga, quasi maxime molestiae atque.
+                        Harum quos beatae expedita fugiat necessitatibus blanditiis minima aperiam! Architecto dolorem voluptates quam quibusdam laboriosam unde fuga nostrum laborum. Asperiores autem quos quasi id iure repudiandae est deleniti et dolorum?</td>
                     </tr>
                     <tr>
-                        <td>1</td>
-                        <td>camera d'albergo</td>
-                        <td>200€</td>
+                        <td>Lorem ipsum dolor sit amet.</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing.</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quas illo laborum! Labore, obcaecati? Repellat necessitatibus a cupiditate reprehenderit, repudiandae quibusdam pariatur libero voluptatum numquam fuga, quasi maxime molestiae atque.
+                        Harum quos beatae expedita fugiat necessitatibus blanditiis minima aperiam! Architecto dolorem voluptates quam quibusdam laboriosam unde fuga nostrum laborum. Asperiores autem quos quasi id iure repudiandae est deleniti et dolorum?</td>
                     </tr>
-                    <tr>
-                        <td>32</td>
-                        <td>fish&chips</td>
-                        <td>320€</td>
+                    <tr class="tableBG">
+                        <td>Lorem ipsum dolor sit amet.</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing.</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quas illo laborum! Labore, obcaecati? Repellat necessitatibus a cupiditate reprehenderit, repudiandae quibusdam pariatur libero voluptatum numquam fuga, quasi maxime molestiae atque.
+                        Harum quos beatae expedita fugiat necessitatibus blanditiis minima aperiam! Architecto dolorem voluptates quam quibusdam laboriosam unde fuga nostrum laborum. Asperiores autem quos quasi id iure repudiandae est deleniti et dolorum?</td>
                     </tr>
+
                 </tbody>
-                <tfoot>
-                    <tr>
-                        <td colspan="2">totale</td>
-                        <td>640€</td>
-                    </tr>
-                </tfoot>
             </table>
 
+            <!-- articolo -->
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum perferendis expedita commodi repellat dignissimos molestias, aliquid, odit culpa, consequuntur perspiciatis nisi aperiam voluptate nostrum numquam modi repellendus nihil maxime voluptas.
+                Quisquam, ullam placeat modi suscipit corporis minus vitae. Inventore, illum amet? Exercitationem fugiat deserunt sapiente aperiam assumenda velit. Illum aliquam sed 
+                   <span class="textHighlight">ipsum quod doloremque impedit dolores qui nostrum laboriosam harum?
+                   Aliquid sunt ratione quae molestiae cumque. Rem cupiditate harum nihil architecto dolor magni doloremque deleniti dolorem, debitis vitae sunt quis totam fugit, quia vel
+                   </span> corporis mollitia sapiente, nisi explicabo saepe!
+                Suscipit perspiciatis obcaecati qui quisquam nisi alias rem repudiandae culpa aliquid ab impedit vitae rerum vero, praesentium maiores dicta natus illum voluptatem dolorem veniam sint! Corporis consequatur natus eum aliquid.
+                Facilis nesciunt iusto nemo dolorum, error accusamus libero nulla accusantium provident nihil tenetur a ex animi harum veritatis! Error delectus earum suscipit laudantium nihil, repellat voluptate a rem beatae est!
+            </p>
 
         </section>
         
