--- a/index.html
+++ b/index.html
@@ -105,12 +105,13 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="container">
         <!-- suggestions -->
         <section>
-    
+            <p class="textGray noInterlinea"> Potrebbero interessarti anche</p>
+            <div class="immVio"> Lorem, ipsum dolor.</div>
+            <div class="immRed"> Lorem, ipsum dolor.</div>
         </section>
-
     </footer>
     
 </body>
